feat(web): integrate Resources + Media #889
Closes #889

$source=07dee514e1a069c18dcca58eb6f26bc5eb45aa89$